The tree lines were being weird on mobile, so this should fix em

--- a/style.css
+++ b/style.css
@@ -353,7 +353,7 @@ input[type=radio]:checked {
   display: block;
   top: 28px;
   left: -3px;
-  width: 3px;
+  width: 4px;
   height: calc(100% - 20px);
   background-color: var(--panel-bg);
 }
@@ -362,8 +362,8 @@ input[type=radio]:checked {
   content: " ";
   display: inline-block;
   margin-right: 4px;
-  margin-left: -16px;
-  width: 16px;
+  margin-left: -17px;
+  width: 17px;
   border-bottom: var(--orange-border);
   position: relative;
 }
